--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0"
   },
